--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,5 @@ Suggests:
     httptest,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+URL: https://github.com/maelle/teeest
+BugReports: https://github.com/maelle/teeest/issues
